--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -199,6 +199,39 @@ code {
    {
        color: green;
    }
+
+
+  .sign-in-label
+  {   color:#777;
+      display: block;
+      padding-top:0px;
+      padding-bottom:0px;
+      padding-left: 5px;
+      margin-bottom:0px ;
+
+  }
+  .sign-in-btn
+  {
+      margin-top:20px;
+  }
+
+  .sign-in-reset
+  {
+       display: block;
+       padding-top:6px;
+       padding-left: 5px;
+  }
+    #login_form
+    {
+        margin-top:0px ;
+        margin-bottom:0px ;
+    }
+
+
+    .btn-social{
+    margin-top: 10px;
+    }
+
     </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -261,11 +294,12 @@ code {
                  </a>
             </li>
 
-            <li><a href="/logout">Log out</a></li>
+            <li><a href="/logout">Salir</a></li>
 
           {% else %}
 
-            <li><a href="/login">Log in</a></li>
+            <li><a href="/login">Iniciar Sesión</a></li>
+
           {% endif %}
 
 
