--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,7 +3,10 @@
 
 
 {% block content %}
-<form id='login_form' class="form-horizontal" role="form" method="post" action="{% url 'django.contrib.auth.views.login' %}"
+ <div class="container">
+
+
+<form id='login_form' class="form-signin" role="form" method="post" action="{% url 'django.contrib.auth.views.login' %}"
       xmlns="http://www.w3.org/1999/html">{% csrf_token %}
 
 
@@ -26,50 +29,95 @@
     <p>Si no recuerdas la cuenta puedes <a href='/password_reset/'> restablecer tu perfil. </a> Ya en tu perfil puedes asociar de nuevo otras cuentas.</p>
 </div>
 
-
-
 {% endif %}
 
+<div class="row">
 
-  <div class="form-group">
-    <label for="id_username" class="col-sm-2 control-label">Usuario:</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputEmail3" placeholder="Usuario" id="id_username" maxlength="254" name="username">
-        {{ form.username }}
-        </input>
+    <div class="col-md-4 col-md-offset-3">
+
+        <h2>Iniciar Sesión</h2>
+         <div class="form-group">
+               <label for="id_username" class="sign-in-label control-label">Usuario</label>
+
+              <input type="text" class="form-control" id="inputEmail3" placeholder="Usuario" id="id_username" maxlength="254" name="username">
+
+                {{ form.username }}
+
+                </input>
+
+             </div>
+    </div>
+</div>
+
+<div class="row">
+
+    <div class="col-md-4 col-md-offset-3">
+
+         <div class="form-group">
+               <label for="id_password" class="sign-in-label control-label">Contraseña</label>
+
+             <input type="password" class="form-control" id="id_password" placeholder="Contraseña" name="password">
+                {{ form.password }} </input>
+
+
+       <button type="submit" class="sign-in-btn btn btn-success btn-block " >Iniciar Sesión</button>
+       <label class="sign-in-reset control-label"> <a href="#"> <small> ¿Se te olvidó la contraseña? </small> </a> </label>
+       <input type="hidden" name="next" value="{{ next }}" />
+
+       </div>
 
     </div>
-  </div>
-  <div class="form-group">
-    <label for="id_password" class="col-sm-2 control-label">Password:</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="id_password" placeholder="Password" name="password">
-        {{ form.password }}
-      </input>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Login</button>
-    </div>
-  </div>
-<input type="hidden" name="next" value="{{ next }}" />
+
+</div>
 
 </form>
 
+<div class="row">
+  <div class="col-md-4 col-md-offset-3">
+    <h3> <small>¿Aún no tienes cuenta? </small></h3>
+      <p> <strong>
+ Crea tu cuenta en
+          <a href="/register" class="">
+        protoboard.org</a>
+          </strong>
+</p>
+  </div>
+
+
+
+</div>
+
+
 
 <div class="row">
-  <div class="col-md-6">
-      <a id="login-facebook-btn" href="/facebook/get_login?next={{ next }}" class="btn btn-block btn-social btn-facebook "> <i class="fa fa-facebook"></i>
-        Regístrate con Facebook</a></div>
+
+  <div class="col-md-4 col-md-offset-3">
+      <h3><small>Registrate también con:</small></h3>
+      <a id="login-facebook-btn" class="btn btn-default btn-social btn-block btn-facebook " href="/facebook/get_login?next={{ next }}"> <i class="fa fa-facebook"></i>
+        Facebook</a></div>
   <div class="col-md-1"> </div>
 
 
-  <div class="col-md-6">
-      <a id="loginGoogle" class="btn btn-block btn-social btn-google-plus"><i class="fa fa-google-plus"></i>
-       Regístrate con Google </a>
-  </div>
 </div>
+
+    <div class="row">
+
+  <div class="col-md-4 col-md-offset-3">
+      <a id="loginGoogle" class="btn btn-default  btn-social btn-block btn-google-plus"><i class="fa fa-google-plus"></i>
+       Google Plus </a>
+  </div>
+
+    </div>
+
+
+
+
+
+</div>
+
+
+
+
 
 
 
