--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -61,7 +61,7 @@
 
 
        <button type="submit" class="sign-in-btn btn btn-success btn-block " >Iniciar Sesión</button>
-       <label class="sign-in-reset control-label"> <a href="#"> <small> ¿Se te olvidó la contraseña? </small> </a> </label>
+       <label class="sign-in-reset control-label"> <a href="/password_reset"> <small> ¿Se te olvidó la contraseña? </small> </a> </label>
        <input type="hidden" name="next" value="{{ next }}" />
 
        </div>
