--- a/templates/activitytree/me.html
+++ b/templates/activitytree/me.html
@@ -79,19 +79,24 @@ __author__ = 'mario'
             <form  id="login_form">
   <div class="form-group">
   <label for="username">Usuario</label>
-    <input type="text" class="form-control" id="username" name="username"  placeholder="{{ user.username }}">
+    <input type="text" class="form-control" id="username" name="username"
+           value="{{ user.username }}" placeholder="Usuario">
+
   </div>
   <div class="form-group">
   <label for="username">Nombre</label>
-    <input type="text" class="form-control" id="first_name" name="first_name" placeholder="{{  user.first_name }}">
+    <input type="text" class="form-control" id="first_name" name="first_name"
+           value="{{  user.first_name }}" placeholder="Nombre">
   </div>
     <div class="form-group">
   <label for="username">Apellido</label>
-    <input type="text" class="form-control" id="last_name" name="last_name" placeholder="{{  user.last_name }}">
+    <input type="text" class="form-control" id="last_name" name="last_name"
+           value="{{  user.last_name }}" placeholder="Apellido">
   </div>
   <div class="form-group">
-  <label for="exampleInputEmail1">Correo electrónico (solo lectura)</label>
-    <input type="email" class="form-control" id="email" name="email" placeholder="{{ user.email }}" disabled>
+  <label for="exampleInputEmail1">Correo electrónico</label>
+      <p class="form-control-static">{{ user.email }}</p>
+
   </div>
 
   <button id="form-submit" type="submit" class="btn btn-default"> Actualizar </button>
@@ -227,17 +232,11 @@ __author__ = 'mario'
                 }
             });
 
-      $.post('/me', $( "#login_form" ).serialize(),function() {
-                  alert( "success" );
-                })
-                  .done(function() {
-                    alert( "second success" );
-                  })
-                  .fail(function() {
-                    alert( "error" );
-                  })
-                  .always(function() {
-                    alert( "finished" );
+      $.post('/me', $( "#login_form" ).serialize(),
+              function(data) {
+                  alert( "succsess" );
+                   alert(data.success);
+                   alert(data.error);
                 }
 
       );
