Corrección de estilo.

--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -122,7 +122,7 @@ body {
 
 
         <div class="col-md-6">
-        <h4>Min-cursos <small>Una secuencia de actividades, se registra tú avance. Te debes registrar.</small></h4>
+        <h4>Min-cursos <small>Secuencia de actividades, se registra tú avance. Te debes registrar.</small></h4>
             {% for c in courses %}
         <div class="media">
             <div class="media-left">
@@ -148,7 +148,7 @@ body {
         </div>
 
       <div id='activities' class="col-md-6">
-       <h4>Actividades <small> Son actividades independientes, tú decides que ver. No requiere registro, velas como quieras.</small></h4>
+       <h4>Actividades <small> Son actividades independientes, tú decides que ver. No requiere registro.</small></h4>
 
 
 
