Se ha olvidado la contraseña

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -9,6 +9,14 @@
     {{ form.as_p }}
     <input type="submit" value="{% trans 'Change password' %}" />
 </form>
+
+    <p>
+    {% trans "If you forgot your password or have not created one yet. Reset your password" %}
+    <a href="/password_reset/">{% trans "here" %}</a>
+
+    </p>
+
+
 {% endblock %}
 
 
