--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -79,14 +79,23 @@ body {
             {% else %}
             <li><a href="/me"> {{ user.username }} </a></li>
             {% endif %}
-            <li><a class="navbar-user" href="#">
+                        <li><a class="navbar-user" href="/me">
+
+            {% comment %}
                 {%  if user.userprofile.facebook_uid %}
                 <img src="http://graph.facebook.com/{{ user.userprofile.facebook_uid}}/picture?type=square"/>
                {% else %}
                 <img src="{% gravatar_url user.email 50%}">
                {% endif %}
-                 </a>
+
+             {% endcomment %}
+
+                <img src="{% gravatar_url user.email 50%}">
+                </a>
+
             </li>
+
+
             <li><a href="/logout">Log out</a></li>
 
 
@@ -161,7 +170,9 @@ body {
       <hr>
 
       <footer>
-        <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-a/4.0/88x31.png" /></a>
+        <p>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
+           </a>
             <br />El contenido de los cursos es: <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> y
             otras licencias abiertas.</p>
       </footer>
