--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load gravatar %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -198,6 +199,39 @@ code {
    {
        color: green;
    }
+
+
+  .sign-in-label
+  {   color:#777;
+      display: block;
+      padding-top:0px;
+      padding-bottom:0px;
+      padding-left: 5px;
+      margin-bottom:0px ;
+
+  }
+  .sign-in-btn
+  {
+      margin-top:20px;
+  }
+
+  .sign-in-reset
+  {
+       display: block;
+       padding-top:6px;
+       padding-left: 5px;
+  }
+    #login_form
+    {
+        margin-top:0px ;
+        margin-bottom:0px ;
+    }
+
+
+    .btn-social{
+    margin-top: 10px;
+    }
+
     </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -235,24 +269,45 @@ code {
 
         <div  id="navbar" class=" collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-
-            {% if user.is_authenticated %}
+          {% if user.is_authenticated %}
 
                 {% if XML_NAV %}
                 <li><a href="{{root}}">Curso</a></li>
                 <li><a href="/dashboard{{ root_id }}">Dashboard</a></li>
+                <li><p id="user_points" class="navbar-text"></p></li>
+
                 {% endif %}
-            <li><a href="#"> {{ user.first_name }} {{ user.last_name }}</a> </li>
-            <li><p id="user_points" class="navbar-text"></p></li>
-            <li><a class="navbar-user" href="#"><img src="http://graph.facebook.com/{{user.email}}/picture?type=square"/>  </a></li>
-            <li><a href="/logout">Log out</a></li>
 
+            <li><a href="#"></a></li>
+            {% if user.first_name %}
+            <li><a href="/me"> {{ user.first_name }} {{ user.last_name }}</a></li>
             {% else %}
-
-
-            <li><a href="/login">Log in</a></li>
-
+            <li><a href="/me"> {{ user.username }} </a></li>
             {% endif %}
+
+            <li><a class="navbar-user" href="/me">
+
+            {% comment %}
+                {%  if user.userprofile.facebook_uid %}
+                <img src="http://graph.facebook.com/{{ user.userprofile.facebook_uid}}/picture?type=square"/>
+               {% else %}
+                <img src="{% gravatar_url user.email 50%}">
+               {% endif %}
+
+             {% endcomment %}
+
+                <img src="{% gravatar_url user.email 50%}">
+                </a>
+
+            </li>
+
+            <li><a href="/logout">Salir</a></li>
+
+          {% else %}
+            {% if not hidde_login_link %}
+            <li><a href="/login">Iniciar Sesión</a></li>
+            {% endif %}
+          {% endif %}
 
 
           </ul>
