--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -372,6 +372,7 @@ code {
 
                 -->
             {% endblock content %}
+    {% if rating_totals %}
  <div class="col-md-6 col-md-offset-3">
                <div class="panel panel-default">
                     <div class="panel-body">
@@ -389,7 +390,7 @@ code {
                   </div>
                </div>
 </div>
-
+{% endif %}
 
     </div>
 
