--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -169,7 +169,7 @@
     function start() {
       gapi.load('auth2', function() {
         auth2 = gapi.auth2.init({
-          client_id: '95891402620-36t537m45mim9todkv6vno7k6lqbpqvp.apps.googleusercontent.com',
+          client_id: '{{ google_client_id }}',
           'scope': 'profile email'
           // Scopes to request in addition to 'profile' and 'email'
           //scope: 'additional_scope'
