--- a/templates/activitytree/me.html
+++ b/templates/activitytree/me.html
@@ -302,7 +302,7 @@ __author__ = 'mario'
           }
           else
           {
-             alert("Success");
+             alert("La cuenta de Google+ se ha activado con éxito.");
               window.location.href='/me';
           }
 
