first_name in FB 2.4

--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -65,7 +65,7 @@ body {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">protoboard.org</a>
+          <a class="navbar-brand" id="brand" href="#">protoboard.org</a>
         </div>
 
 
