objective_status removed

--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -121,19 +121,19 @@
 
                     </div>
 
-                    [[#objective_status]]
+                    [[#progress_status]]
                          <div class="col-md-2 text-center">
                            <i class="fa fa-check"></i><br/>
 
 
 
                          </div>
-                     [[/objective_status]]
-                     [[^objective_status]]
+                     [[/progress_status]]
+                     [[^progress_status]]
                         <div class="col-md-2">
 
                          </div>
-                     [[/objective_status]]
+                     [[/progress_status]]
 
 
 
@@ -184,7 +184,7 @@
 
             var uri_string = this.getAttribute("uri");
             var icon = get_icon(uri_string);
-            if (this.getAttribute("objective_status")=="satisfied")
+            if (this.getAttribute("progress_status")=="completed")
                 {
                     icon.icon = "fa fa-check"
                 }
@@ -193,7 +193,7 @@
                 uri:uri_string,
                 icon:icon.icon,
                 disabled:(this.getAttribute("pre_condition")=="disabled"),
-                objective_status:(this.getAttribute("objective_status")=="satisfied")
+                progress_status:(this.getAttribute("progress_status")=="completed")
             };
 
         });
@@ -204,13 +204,13 @@
     function get_percentage(element)
        {
            var percentage = 0.0;
-           if (element.getAttribute("objective_status")=="satisfied")
+           if (element.getAttribute("progress_status")=="completed")
            {
                percentage = 100.00
            }
            else {
 
-               var d = $(element).find("item[objective_status~='satisfied']").length/ $(element).find("item").length;
+               var d = $(element).find("item[progress_status~='completed']").length/ $(element).find("item").length;
                percentage = Math.round(d*100);
 
            }
@@ -318,7 +318,7 @@
              if (this.getAttribute("is_container")=='True')
                 activity_type.icon = "fa fa-folder";
 
-             var satisfied = (this.getAttribute("objective_status")=='satisfied');
+             var completed = (this.getAttribute("progress_status")=='completed');
 
              var root_id = this.getAttribute("root_id")=='None' && this.getAttribute("id") ||  this.getAttribute("root_id");
 
@@ -340,7 +340,7 @@
                             uri: uri_string,
                             root_id:root_id,
                             pre_condition:this.getAttribute("pre_condition"),
-                            objective_status: satisfied,
+                            progress_status: completed,
 
                             image: this.getAttribute("image"),
 
