--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -64,12 +64,12 @@
                      </div>
 
                      <div class="row">
-                     [[#objective_status]]
+                     [[#progress_status]]
                          <div class="col-md-4">
                            <i class="fa fa-check fa-2x"></i><br/>
                              <small>COMPLETO</small>
                          </div>
-                     [[/objective_status]]
+                     [[/progress_status]]
                      </div>
 			</div>
 		</div>
@@ -140,22 +140,22 @@
                      <div class="row">
 
 
-                     [[#objective_status]]
+                     [[#progress_status]]
                          <div class="col-md-4 text-center">
                            <i class="fa fa-check fa-2x"></i><br/>
                             <small>COMPLETO</small>
 
 
                          </div>
-                     [[/objective_status]]
-                     [[^objective_status]]
+                     [[/progress_status]]
+                     [[^progress_status]]
                         <div class="col-md-4 text-center">
                            <i class="fa fa-eye-slash fa-2x"></i><br/>
                             <small>INCOMPLETO</small>
 
 
                          </div>
-                     [[/objective_status]]
+                     [[/progress_status]]
 
 
                      [[#show_attempts]]
@@ -244,7 +244,7 @@
 
                 var uri_string = this.getAttribute("uri");
                 var icon = get_icon(uri_string);
-                if (this.getAttribute("objective_status")=="satisfied")
+                if (this.getAttribute("progress_status")=="completed")
                     {
                     icon.icon = icon.icon + " fa fa-check"
                     }
@@ -254,7 +254,7 @@
                     path_id: this.getAttribute("id"),
                     icon:icon.icon,
                     disabled:(this.getAttribute("pre_condition")=="disabled"),
-                    objective_status:(this.getAttribute("objective_status")=="satisfied")
+                    progress_status:(this.getAttribute("progress_status")=="completed")
                     };
                 }
 
@@ -305,7 +305,7 @@
                             id: this.getAttribute("activity"),
                             rating: recommended_value,
                             children_activities: get_children_activities(this),
-                            objective_status: (this.getAttribute("objective_status") == "satisfied")
+                            progress_status: (this.getAttribute("progress_status") == "completed")
 
                         });
                     }
@@ -322,7 +322,7 @@
 
                         var show_attempts = !(uri_string.lastIndexOf("/activity/", 0) === 0);
 
-                        var is_satisfied = this.getAttribute("objective_status") == "satisfied";
+                        var completed = this.getAttribute("progress_status") == "completed";
                         var has_objective_measure = this.getAttribute("objective_measure") != "None";
 
 
@@ -339,7 +339,7 @@
                             num_attempts: this.getAttribute("num_attempts"),
                             attempt_limit: this.getAttribute("attempt_limit"),
 
-                            objective_status: is_satisfied,
+                            progress_status: completed,
                             objective_measure: Math.floor(this.getAttribute("objective_measure")),
                             show_objective_measure: has_objective_measure,
                             show_attempts: show_attempts
@@ -382,7 +382,7 @@
                                     path_id: this.getAttribute("id"),
                                     rating: recommended_value,
                                     children_activities: get_children_activities(this),
-                                    objective_status: (this.getAttribute("objective_status") == "satisfied")
+                                    progress_status: (this.getAttribute("progress_status") == "completed")
 
                                 });
                             }
@@ -399,7 +399,7 @@
 
                                 var show_attempts = !(uri_string.lastIndexOf("/activity/", 0) === 0);
 
-                                var is_satisfied = this.getAttribute("objective_status") == "satisfied";
+                                var is_satisfied = this.getAttribute("progress_status") == "completed";
                                 var has_objective_measure = this.getAttribute("objective_measure") != "None";
 
 
@@ -415,7 +415,7 @@
                                             num_attempts: this.getAttribute("num_attempts"),
                                             attempt_limit: this.getAttribute("attempt_limit"),
                                             path_id: this.getAttribute("id"),
-                                            objective_status: is_satisfied,
+                                            progress_status: is_satisfied,
                                             objective_measure: Math.floor(this.getAttribute("objective_measure")),
                                             show_objective_measure: has_objective_measure,
                                             show_attempts: show_attempts}
