--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -339,6 +339,20 @@ code {
 
                         {% endif%}
                     {% endfor%}
+
+{% comment %}
+                         <li class="dropdown open">
+                             <a class="dropdown-toggle" id="branches" role="button" data-toggle="dropdown" href="#">default <b class="caret"></b></a>
+                                                      <ul id="branches-dropdown" class="dropdown-menu">
+                                      <li><a tabindex="-1" href="...8109a3a986c7">commissions - <code>8109a3a986c7</code></a></li>
+                                        <li><a tabindex="-1" href="...76d3a7022f9e">dashboard-integration - <code>76d3a7022f9e</code></a></li>
+                                         <li><a tabindex="-1" href="...4ee00eb42b72">default - <code>4ee00eb42b72</code></a></li>
+                                    <li><a tabindex="-1" href="...10755b086192">led-support - <code>10755b086192</code></a></li>
+                                    <li><a tabindex="-1" href="...298fa9e18508">stable - <code>298fa9e18508</code></a></li>
+                                    <li><a tabindex="-1" href="...990826c5d5df">xdm-customer-selection - <code>990826c5d5df</code></a></li>
+                                </ul>
+                         </li>
+                         {% endcomment %}
                 </ol>
             {%endif%}
         </div>
