--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -8,234 +8,32 @@
 
     <title>Protoboard</title>
 
-    <!-- Bootstrap core CSS -->
+
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.raty.css"/>
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css">
+
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}app/styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css"  >
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css">
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/bootstrap-social.css" title="social stylesheet" />
     <link rel="stylesheet" type="text/css" href="//code.jquery.com/qunit/qunit-1.18.0.css">
-    <!-- Custom styles for this template -->
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.raty.css"/>
+      <script src="{{ STATIC_URL }}app/scripts/modernizr.js"></script>
 
     <!-- Custom styles for this template -->
-    <style type="text/css" media="screen">
-	 /*
- * Base structure
- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
- /* padding-top: 50px;*/
-}
-  #page  {
-	padding: 0;
-	margin: 0;
-    }
-
-  #main_container
-  {
-      padding-top: 60px;
-  }
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
-}
-body > .container {
-  padding: 60px 15px 0;
-}
-.container .text-muted {
-  margin: 20px 0;
-}
-
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-code {
-  font-size: 80%;
-}
-
-/*
- * Global add-ons
- */
-
-.sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
-}
+    <link rel="stylesheet" href="{{ STATIC_URL }}app/styles/activity_tree.css">
+    <!-- Custom styles for this template-->
 
 
-/*
- * Sidebar
- */
+    <!-- Custom styles for derived templates -->
+      <style>
+         {% block style %}
 
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-  }
-}
+         {% endblock style %}
+      </style>
+
+    <!-- Custom styles for derived templates -->
 
 
-
-/*
- * Main content
- */
-
-.main {
-  padding: 20px;
-}
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
-.main .page-header {
-  margin-top: 0;
-}
-
-
-/*
- * Placeholder dashboard ideas
- */
-
-.placeholders {
-  margin-bottom: 30px;
-  text-align: center;
-}
-.placeholders h4 {
-  margin-bottom: 0;
-}
-.placeholder {
-  margin-bottom: 20px;
-}
-.placeholder img {
-  display: inline-block;
-  border-radius: 50%;
-}
-
-
-
-
-.video {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px; height: 0; overflow: hidden;
-    margin-bottom:10px;
-}
-
-.video iframe,
-.video object,
-.video embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-     #panel_col{
-      margin-top: 50px;
-        }
-.second-navbar{
-    top:40px;
-}
- .pager
- {
-     margin: 0px 0px;
-
- }
-    .pager li > span
-    {
-     color: #428BCA;
-     cursor:pointer;
-    }
-
-    .pager li > span:hover, .pager li > span:focus
-    {
-     background-color: #eeeeee;
-    }
-
-    input.btn
-    {
-        margin-top: 10px;
-    }
-
-   .navbar-nav > li >  a.navbar-user
-    {
-    padding-bottom: 0px;
-    padding-top: 0px;
-    }
-     {% block style %}
-
-     {%  endblock style %}
-
-
-   .fa-check
-   {
-       color: green;
-   }
-
-
-  .sign-in-label
-  {   color:#777;
-      display: block;
-      padding-top:0px;
-      padding-bottom:0px;
-      padding-left: 5px;
-      margin-bottom:0px ;
-
-  }
-  .sign-in-btn
-  {
-      margin-top:20px;
-  }
-
-  .sign-in-reset
-  {
-       display: block;
-       padding-top:6px;
-       padding-left: 5px;
-  }
-    #login_form
-    {
-        margin-top:0px ;
-        margin-bottom:0px ;
-    }
-
-    #rating-message-container{
-        margin-top: 10px;
-    }
-
-    .btn-social{
-    margin-top: 10px;
-    }
-
-    </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -290,15 +88,6 @@ code {
 
             <li><a class="navbar-user" href="/me">
 
-            {% comment %}
-                {%  if user.userprofile.facebook_uid %}
-                <img src="http://graph.facebook.com/{{ user.userprofile.facebook_uid}}/picture?type=square"/>
-               {% else %}
-                <img src="{% gravatar_url user.email 50%}">
-               {% endif %}
-
-             {% endcomment %}
-
                 <img src="{% gravatar_url user.email 50%}">
                 </a>
 
@@ -339,20 +128,6 @@ code {
 
                         {% endif%}
                     {% endfor%}
-
-{% comment %}
-                         <li class="dropdown open">
-                             <a class="dropdown-toggle" id="branches" role="button" data-toggle="dropdown" href="#">default <b class="caret"></b></a>
-                                                      <ul id="branches-dropdown" class="dropdown-menu">
-                                      <li><a tabindex="-1" href="...8109a3a986c7">commissions - <code>8109a3a986c7</code></a></li>
-                                        <li><a tabindex="-1" href="...76d3a7022f9e">dashboard-integration - <code>76d3a7022f9e</code></a></li>
-                                         <li><a tabindex="-1" href="...4ee00eb42b72">default - <code>4ee00eb42b72</code></a></li>
-                                    <li><a tabindex="-1" href="...10755b086192">led-support - <code>10755b086192</code></a></li>
-                                    <li><a tabindex="-1" href="...298fa9e18508">stable - <code>298fa9e18508</code></a></li>
-                                    <li><a tabindex="-1" href="...990826c5d5df">xdm-customer-selection - <code>990826c5d5df</code></a></li>
-                                </ul>
-                         </li>
-                         {% endcomment %}
                 </ol>
             {%endif%}
         </div>
@@ -360,9 +135,9 @@ code {
 
         <div id="user_points" class="col-md-3 ">
              {% if XML_NAV %}
- <div class="row">
+                <div class="row">
 
-         <form id="nav_form"   role="form" action="{{ root_id }}{{root}}" method = "POST">{% csrf_token %}
+                <form id="nav_form"   role="form" action="{{ root_id }}{{root}}" method = "POST">{% csrf_token %}
 
 
                <ul class="pager">
@@ -370,11 +145,11 @@ code {
                     <li ><span class="nav_next">  Continuar &rarr;</span></li>
                </ul>
 
-       </form>
+                </form>
 
 
-    </div>
-  {% endif %}
+                 </div>
+            {% endif %}
         </div>
      </div>
 
@@ -409,14 +184,29 @@ code {
     </div>
 
 
+
+      </div><!-- container -->
+   </div> <!-- page -->
+
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script  type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script  type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script  type="text/javascript" src="{{MEDIA_URL}}js/mustache.min.js"></script>
-    <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.raty.js"></script>
 
+    <!-- build:js(.) scripts/plugins.js -->
+
+    <script src="{{ STATIC_URL }}app/scripts/jquery.min.js"></script>
+    <script src="{{ STATIC_URL }}app/scripts/bootstrap.min.js"></script>
+    <script src="{{ STATIC_URL }}app/scripts/jquery-sortable-lists.min.js"></script>
+    <script src="{{ STATIC_URL }}app/scripts/mustache.min.js"></script>
+    <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.raty.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js"></script>
+
+
+<!-- endbuild -->
+
+<!-- build:js scripts/main.js -->
+<script src="{{ STATIC_URL }}app/scripts/main.js"></script>
 
   <script type="text/javascript" charset="utf-8">
 
@@ -487,7 +277,7 @@ $(document).ready(function() {
     $('.next').hide(0);
   });
 });
- 
+
           {% else %}
 
           in_path = false;
@@ -524,7 +314,7 @@ function getCookie(name) {
                     }
                 }
             });
-            
+
 
 $('#rating-info').raty({
     path: '{{MEDIA_URL}}images',
@@ -571,7 +361,6 @@ $('#rating-info').raty({
 
   {% endblock scripts %}
 
-      </div><!-- container -->
-   </div> <!-- page -->
+
   </body>
 </html>
