course_builder view

--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -210,6 +210,8 @@
 
   <script type="text/javascript" charset="utf-8">
 
+      Mustache.tags = ['[[', ']]'];
+
       {% if XML_NAV  %}
 
         in_path = true;
