--- a/activitytree/static/app/styles/activity_tree.css
+++ b/activitytree/static/app/styles/activity_tree.css
@@ -36,13 +36,15 @@ ul.sTree2 li, ul#sortableListsBase li { padding-left:40px; margin:5px; border:1p
 */
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
-  /* padding-top: 50px;*/
+ /* margin-bottom: 60px;*/
+   padding-top: 20px;
 }
 
 body > .container {
   padding: 60px 15px 0;
 }
+
+
 
 .red { background-color:#ff9999; }
 .blue { background-color:#aaaaff;}
@@ -84,11 +86,8 @@ html {
   position: relative;
   min-height: 100%;
 }
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
- /* padding-top: 50px;*/
-}
+
+
   #page  {
 	padding: 0;
 	margin: 0;
@@ -107,9 +106,7 @@ body {
   height: 60px;
   background-color: #f5f5f5;
 }
-body > .container {
-  padding: 60px 15px 0;
-}
+
 .container .text-muted {
   margin: 20px 0;
 }
@@ -278,7 +275,7 @@ ul.course-listing-bar li {
         margin-top: 10px;
     }
 
-   .navbar-nav > li >  a.navbar-user
+   a.nav-link.nav-link-user
     {
     padding-bottom: 0px;
     padding-top: 0px;
