--- a/activitytree/static/app/styles/activity_tree.css
+++ b/activitytree/static/app/styles/activity_tree.css
@@ -1,6 +1,12 @@
 
 
 
+#navlist .col-sm-12{
+  margin-top: .25rem;
+  margin-bottom: .25rem;
+}
+
+
 ul.sTree2 li .activity{
   background-color:#f5f5f5;
 
