--- a/activitytree/static/app/styles/activity_tree.css
+++ b/activitytree/static/app/styles/activity_tree.css
@@ -94,6 +94,36 @@ html {
   position: relative;
   min-height: 100%;
 }
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 120px;
+}
+.footer {
+  position: absolute;
+  margin-top: 100px;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 120px;
+  background-color: #f5f5f5;
+  font-size:80% ;
+}
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+body > .container {
+  padding: 60px 15px 0;
+}
+
+.footer > .container {
+  padding-top: 2rem;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
 
 
 
@@ -102,27 +132,8 @@ html {
       padding-top: 20px;
   }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
-}
 
-.container .text-muted {
-  margin: 20px 0;
-}
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-code {
-  font-size: 80%;
-}
 
 /*
  * Global add-ons
