--- a/activitytree/static/app/styles/activity_tree.css
+++ b/activitytree/static/app/styles/activity_tree.css
@@ -105,7 +105,7 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 120px;
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5; */
   font-size:80% ;
 }
 
